--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ ul li a:hover + .hidden, .hidden:hover {
 .show-menu {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-decoration: none;
-    color: #fff;
-    background: #19c589;
+    background: pink;
+    border-radius: 16px;
     text-align: center;
     padding: 10px 0;
     display: none;
@@ -129,7 +129,8 @@ input[type=checkbox]:checked ~ #menu{
 }
 
 .thumbnail {
-    width:30%
+    width:30%;
+    border-radius: 16px;
 }
 
 /*Responsive Styles*/
