--- a/dos.css
+++ b/dos.css
@@ -71,7 +71,7 @@ header.masthead .masthead-heading {
 
 .thanks {
   border-radius: 15px;
-  background-color: rgba(50, 50, 50, 0.9);
+  background-color: rgba(50, 50, 50, 0.1);
   font-size: 1.5rem;
 }
 
@@ -89,8 +89,12 @@ header.masthead .masthead-heading {
   background: lavenderblush;
 }
 
+.main-icon {
+  box-shadow: 3px 3px rgba(235, 114, 218, 0.3)
+}
+
 #section3 {
-  background: lightsteelblue;
+  background: tan;
   font-family: "Montserrat", sans-serif;
 }
 #section4{
@@ -160,6 +164,11 @@ img {
 .modal-body {
   background-color: lavenderblush;
 }
+
+.service-small{
+  display:none;
+}
+
 @media (max-width: 1200px) {
   #logobox {
     color: white;
@@ -194,5 +203,11 @@ img {
     color: white;
     width: 60%;
     height: auto;
+  }
+  .service-title {
+    display:none;
+  }
+  .service-small {
+    display: block;
   }
 }
